add colors and diff font

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,6 +17,7 @@ li,
 span,
 strong {
   color: var(--global-text-color);
+  font-family: 'Inconsolata', 'Open Sans', 'Helvetica Neue', monospace;
 }
 
 hr {
