--- a/_includes/figure.liquid
+++ b/_includes/figure.liquid
@@ -11,7 +11,7 @@
       See https://www.debugbear.com/blog/responsive-images#w-descriptors-and-the-sizes-attribute and
       https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images for info on defining 'sizes' for responsive images
     -->
-    {% if site.imagemagick.enabled %}
+    {% comment %} {% if site.imagemagick.enabled %}
       <source
         class="responsive-img-srcset"
         srcset="{% for i in site.imagemagick.widths %}{{ img_path | relative_url }}-{{ i }}.webp {{i}}w,{% endfor %}"
@@ -20,9 +20,8 @@
         {% else %}
           sizes="95vw"
         {% endif %}
-        type="image/webp"
       >
-    {% endif %}
+    {% endif %} {% endcomment %}
     <img
       src="{% if include.cache_bust %}{{ include.path | relative_url | bust_file_cache }}{% else %}{{ include.path | relative_url }}{% endif %}"
       {% if include.class %}
