--- a/_includes/projects.liquid
+++ b/_includes/projects.liquid
@@ -1,5 +1,5 @@
 <div class="col">
-  <a href="{% if project.redirect %}{{ project.redirect }}{% else %}{{ project.url | relative_url }}{% endif %}">
+  <a href="{% if project.redirect %}{% if project.redirect contains '://' %}{{ project.redirect}}{% else %}{{ project.redirect | relative_url }}{% endif %}{% else %}{{ project.url | relative_url }}{% endif %}">
     <div class="card h-100 hoverable">
       {% if project.img %}
         {%
@@ -8,7 +8,7 @@
           path=project.img
           sizes = "250px"
           alt="project thumbnail"
-          class="card-img-top"
+          class="preview"
         %}
       {% endif %}
       <div class="card-body">
