--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -84,5 +84,9 @@ layout: default
     {% if site.newsletter.enabled and site.footer_fixed %}
       {% include scripts/newsletter.liquid center=true %}
     {% endif %}
+    
+    <div id="map" style="display: none;">
+      <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=300&t=tt&d=XjByVQPW2YWd71mzS-9dHqwvjmKK1EyOQTbssq_fr7k', style="display: none;"></script>
+    </div>
   </article>
 </div>
