--- a/_includes/art.liquid
+++ b/_includes/art.liquid
@@ -1,10 +1,18 @@
 <div class="col">
+  <a href="{% if project.redirect %}{% if project.redirect contains '://' %}{{ project.redirect}}{% else %}{{ project.redirect | relative_url }}{% endif %}{% else %}{{ project.url | relative_url }}{% endif %}">
+  {% if project.redirect %}
+    {% assign zoom = false %}
+  {% else %}
+    {% assign zoom = true %}
+  {% endif %}
   {%
     include figure.liquid
     loading="eager"
     path=project.img
     sizes = "250px"
     alt="thumbnail"
-    zoomable=true
+    zoomable=zoom
+    class="preview"
   %}
+  </a>
 </div>
