--- a/css/main.css
+++ b/css/main.css
@@ -217,6 +217,56 @@ iframe {
     gap: 0.3em;
     margin: 1em 0;
 }
+/* Blog listing */
+.blog-entry {
+    margin-bottom: 2em;
+    overflow: hidden;
+}
+
+.blog-link {
+    display: flex;
+    align-items: flex-start;
+    gap: 1.5em;
+    text-decoration: none;
+    color: inherit;
+}
+
+.blog-link:hover {
+    text-decoration: none;
+}
+
+.blog-link:hover h2 {
+    text-decoration: underline;
+}
+
+.blog-thumbnail {
+    flex-shrink: 0;
+    width: 200px;
+    height: 150px;
+}
+
+.blog-thumbnail img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 1px solid var(--border-color);
+}
+
+.blog-info {
+    flex: 1;
+}
+
+.blog-info h2 {
+    margin: 0 0 0.5em 0;
+    font-size: 1.5em;
+}
+
+.blog-date {
+    margin: 0;
+    color: var(--text-color);
+    opacity: 0.7;
+}
+
 /* Blog posts */
 .blog-post {
     width: 70%;
